test/errors/value/str/tostr-format.yasl

echo mt.lookup('', .tostr)('asdfg', 'a')
